# NBA-Ingame-Win-Probability

./: .gitignore  .pre-commit-config.yaml  APP.py  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Model/: prediction.py
config/: run_config.yaml  run_config_bayesian.yaml  run_config_catboost.yaml  run_config_linear_logistic.yaml  run_config_linear_regression.yaml
deploy/: .Dockerfile  docker-compose.yml  pg-cred.env  run.sh
models/: bayesian_model-20250211-151155-5100.pth  bayesian_model-20250211-235348-774.pth  bayesian_model-20250928-075151.pth  cb_model-20250928-075126-cat.cbm  lin_model-20250928-074926-log.pkl  lin_model-20250928-075116-reg.pkl  lin_model-20250928-075121-log.pkl  model_init-20250211-151155-5100.yaml  model_init-20250211-235348-774.yaml  multi_output_model.pkl  nw_bayesian_model-20250128-125400-loss_1_3243823564165846.pth  nw_model_init.yaml  nw_run_config.yaml  nw_scalers.pkl  run_config-20250211-151155-5100.yaml  run_config-20250211-235348-774.yaml  run_config-20250212-034438-cat.yaml  run_config-20250212-163502-cat.yaml  run_config-20250928-074926-log.yaml  run_config-20250928-075116-reg.yaml  run_config-20250928-075121-log.yaml  run_config-20250928-075126-cat.yaml  run_config-20250928-075151.yaml  scalers-20250211-151155-5100.pkl  scalers-20250211-235348-774.pkl  scalers-20250212-034438-cat.pkl  scalers-20250212-163502-cat.pkl  scalers-20250928-075116-reg.pkl  w_bayesian_model-20250128-120945-loss_1_2943673074375524.pth  w_run_config.yaml  w_scalers.pkl
models/production/bayesian/: model.pth  model_init.yaml  run_config.yaml  scalers.pkl
models/production/catboost/: model.cbm  run_config.yaml
models/production/linear_logistic/: model.pkl  run_config.yaml
models/production/linear_regression/: model.pkl  run_config.yaml
nba_betting_ai/: app.py  consts.py  draft.py
nba_betting_ai/app/: inference.py  live_scores.py  start.py
nba_betting_ai/data/: ingest.py  processing.py  storage.py
nba_betting_ai/deploy/: inference.py  inference_bayesian.py  inference_catboost.py  inference_linear.py  promote.py
nba_betting_ai/model/: bayesian.py  inputs.py  prediction.py  team_encoder.py
nba_betting_ai/pages/: inference.py  inference_model.py
nba_betting_ai/training/: catboost.py  dataset.py  hpo.py  linear.py  metrics.py  pipeline.py  plotting.py  run.py  run_torch.py  trainers.py
nba_betting_ai/utils/: data_providers.py  utils.py
nba_ingame_prob/app/: inference.py  start.py
nba_ingame_prob/data/: ingest.py  processing.py  storage.py
nba_ingame_prob/deploy/: inference_bayesian.py  inference_catboost.py  inference_linear.py  promote.py  utils.py
nba_ingame_prob/model/: bayesian.py  inputs.py  prediction.py  team_encoder.py
nba_ingame_prob/training/: catboost.py  dataset.py  hpo.py  linear.py  mlflow_utils.py  pipeline.py  plotting.py  run_torch.py  trainers.py
nba_ingame_prob/utils/: data_providers.py
notebooks/: 01-data_ingestion.ipynb  01-exploring_api.ipynb  02-data_exploration.ipynb  03-ml-baseline.ipynb  04-modeling.ipynb  05-training.ipynb  05b-training_cb.ipynb  05b-training_xgb.ipynb  06-plots.ipynb  06-variable-selection.ipynb  07-experiments.ipynb  NBA_Model.ipynb  exploring_api.ipynb
pages/: inference_model.py
utils/: DataProviders.py  utils.py
