[project]
name = "nba-ingame-prob"
version = "0.1.0"
description = ""
authors = [{name="Tomislav Bukic", email="tomislav@bukic.net"}]
readme = "README.md"
dependencies = [
    "altair>=5.5.0",
    "attrs>=24.3.0",
    "bokeh==2.4.3",
    "catboost>=1.2.7",
    "mlflow==2.19.0",
    "nba_api>=1.6.1",
    "omegaconf>=2.3.0",
    "optuna>=4.5.0",
    "playwright>=1.49.1",
    "psycopg2-binary>=2.9.10",
    "pynvml>=12.0.0",
    "requests>=2.32.3",
    "sbrscrape>=0.0.10",
    "scikit-learn>=1.6.0",
    "scoringrules>=0.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.41.1",
    "tenacity>=9.0.0",
    "tensorflow>=2.18.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "torchviz>=0.0.3",
    "tqdm>=4.67.1",
    "optuna>=3.6.1",
    "sympy>=1.13.1",
]


[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29",
    "ipywidgets>=8.1.7",
    "nbconvert>=7.16",
    "nbdev>=2.3",
    "pre-commit>=4.0",
    "poethepoet>=0.29",
    "pytest>=8.3",
    "ruff>=0.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
    [tool.poe.tasks.deploy]
    shell = "docker compose -f deploy/docker-compose.yml up"

    [tool.poe.tasks.dev]
    shell = "streamlit run nba_ingame_prob/app/start.py"
    
    [tool.poe.tasks.app]
    shell = "streamlit run nba_ingame_prob/app/start.py --server.port ${PORT:-80}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA"
testpaths = [
    "tests",
]
